@@ -8,6 +8,18 @@
 	* gw/wsp_headers.c: Make sure that a Multi-octet-integer is always
 	at least one octet long, even if its value is 0.
 
+2000-11-01  Kalle Marjola  <rpr@wapit.com>
+
+	* gwlib/conffile.c (config_sanity_check): fixed that 'otaconfig'
+	is accepted, too, thanks to Philip Psiloinis for pointing this out
+
+	* gw/bb_smsc.c: make sure that lists are emptied
+
+2000-11-01  Yann Muller  <ymuller@3glab.com>
+
+	* gw/smsc_at.c: handles message lengths of 8*n+1 properly.
+	Added comments to encode7bituncompressed().
+
 2000-10-30  Richard Braakman  <dark@wapit.com>
 
 	* gw/wap-appl.c: Support for X-WAP.TOD header, needed for WAP 1.1
